--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             background-color: #ffc0cb;
         }
         img {
-            max-width: 100%;
-            height: 750px;
+            width: 100%;
+            max-width: 500px;
+            height: auto;
             vertical-align: middle;
         }
     </style>
@@ -25,7 +26,7 @@
         <h1>Amo muito a minha namorada Bruna❤️</h1>
         <p style="font-size: 20px;">Ela é a pessoa mais maravilhosa que existe no mundo!!!</p>
     </div>
-    <div style="display: flex; justify-content: space-evenly;">
+    <div style="display: inline-flex; margin: 0 auto; gap: 20px;">
         <div>
             <p style="margin-bottom: 10px; font-size: 18px;">Essa aqui é ela, olha como ela é linda</p>
             <img src="a-pessoa-que-mais-amo-no-mundo.jpg" alt="">
