--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     </style>
 </head>
 <body>
-    <div style="margin-bottom: 30px;">
+    <div style="margin-bottom: 10px;">
         <h1>Amo muito a minha namorada Bruna❤️</h1>
         <p style="font-size: 20px;">Ela é a pessoa mais maravilhosa que existe no mundo!!!</p>
+        <p style="color: #ffc0cb">mó gostosa ela kkkk slc</p>
     </div>
     <div style="display: inline-flex; margin: 0 auto; gap: 20px;">
         <div>
