--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-66CVN3CPNF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-66CVN3CPNF');
+</script>
 <body>
     <div style="margin-bottom: 10px;">
         <h1>Amo muito a minha namorada Bruna❤️</h1>
